--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ repositories {
     mavenCentral()
 }
 
-mainClassName = "com.dhorby.kotlin.web.CookingApp"
+application {
+    mainClass = "com.dhorby.kotlin.web.CookingApp"
+}
 
 dependencies {
     implementation(platform("org.http4k:http4k-bom:$http4k_version"))
@@ -47,8 +49,6 @@ dependencies {
     testImplementation "org.http4k:http4k-testing-chaos"
     testImplementation "org.http4k:http4k-testing-approval"
     testImplementation "org.http4k:http4k-testing-webdriver"
-
-
 }
 
 test {
